# bichano

./: .gitignore  .gitmodules  Cargo.toml  README.md  requirements.txt  test.pgn
examples/: validate.rs
network/: Cargo.toml
network/src/: encoder.rs  extractor.rs  lib.rs
proto/: Cargo.toml
proto/src/: build.rs
proto/src/protos/: mod.rs  training_chunk.proto  training_chunk.rs
src/: main.rs
training/: batch_loader.py  chunkloader.py  file_loader.py  fileloader.py  generate_proto.sh  main.py  simple_board_encoder.py  simple_policy_encoder.py  tensor_worker.py  training_chunk_pb2.py  training_config.py  training_info.py
training/config/: example.yaml
