[package]
name = "bichano"
version = "0.1.0"
authors = ["ratosh <ratosh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = {path = "proto"}
network = {path= "network"}
pgn-reader = {path = "rust-pgn-reader"}
protobuf = { version = "2", features = ["with-bytes"] }
glob = "0.3.0"