[package]
name = "network"
version = "0.1.0"
authors = ["ratosh <ratosh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = {path = "../proto"}
shakmaty = "0.16"
pgn-reader = {path = "../rust-pgn-reader"}
protobuf = "2"